--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>간단한 포션 게임</title>
+    <title>Heart Bird Game</title>
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-database-compat.js"></script>
@@ -152,6 +152,7 @@
             <div class="name-input-screen" style="display: none;">
                 <h1>축하합니다!</h1>
                 <p>상위 10위 안에 들었습니다!</p>
+                <p>주간 장원에게는 커피 쏩니다!ㅋ</p>
                 <p>점수: <span id="highScore">0</span></p>
                 <input type="text" class="name-input-field" id="playerName" placeholder="닉네임을 입력하세요" maxlength="10">
                 <button id="saveScoreButton">저장</button>
